// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< Updated upstream
exports[`Quieries fetches single user 1`] = `
Object {
  "data": Object {
    "getUser": Object {
      "email": "kyle@webyte.org",
      "firstName": "Kyle",
      "lastName": "Osunero",
      "role": "ADMIN",
      "uid": "8b686839-4c94-48ac-ac51-86d36b7bf17c",
      "updatedAt": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Quieries it signs uo user 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: insert into "users" ("created_at", "user_email", "user_first_name", "user_last_name", "user_password", "user_role", "user_uid") values ($1, $2, $3, $4, $5, $6, $7) returning * - duplicate key value violates unique constraint "users_user_email_unique"],
=======
exports[`Queries deletes the user 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: delete from "users" where "user_uid" = $1 returning * - invalid input syntax for type uuid: "{"uid":"8b686839-4c94-48ac-ac51-86d36b7bf17c"}"],
>>>>>>> Stashed changes
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

<<<<<<< Updated upstream
exports[`Tests Queries and Mutations Signs in up 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Unable to acquire a connection],
=======
exports[`Queries fetches single user 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: User does not exist!],
>>>>>>> Stashed changes
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

<<<<<<< Updated upstream
exports[`Tests Queries and Mutations fetches single user 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Unable to acquire a connection],
=======
exports[`Queries it signs up user 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: insert into "users" ("created_at", "user_birthdate", "user_email", "user_first_name", "user_last_name", "user_password", "user_role", "user_sex", "user_uid") values ($1, $2, $3, $4, $5, $6, $7, $8, $9) returning * - duplicate key value violates unique constraint "users_user_email_unique"],
>>>>>>> Stashed changes
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

<<<<<<< Updated upstream
exports[`Tests Queries and Mutations it signs up user 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Unable to acquire a connection],
=======
exports[`Queries updates the user 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Cannot read property 'user_uid' of undefined],
>>>>>>> Stashed changes
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
